<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/defaults_header">
        <EditTextPreference
            app:key="@string/preference_callsign"
            app:title="@string/callsign"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="@string/preference_default_grid"
            app:title="@string/grid"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/display_header">
        <SwitchPreferenceCompat
            app:key="@string/preference_local_time"
            app:summaryOff="@string/use_local_time_off"
            app:summaryOn="@string/use_local_time_on"
            app:title="@string/use_local_time" />
    </PreferenceCategory>
</PreferenceScreen>
